@@ -34,6 +34,10 @@
         <hazelcast.version>3.7-SNAPSHOT</hazelcast.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
+        <maven.jacoco.plugin.version>0.7.4.201502262128</maven.jacoco.plugin.version>
+        <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+        <maven.findbugs.plugin.version>3.0.0</maven.findbugs.plugin.version>
+        <maven.checkstyle.plugin.version>2.12</maven.checkstyle.plugin.version>
     </properties>
 
     <build>
@@ -153,4 +157,119 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <profiles>
+    <profile>
+        <id>checkstyle</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>${maven.checkstyle.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>checkstyle</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <configLocation>${main.basedir}/checkstyle/checkstyle.xml</configLocation>
+                        <suppressionsLocation>${main.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
+                        <headerLocation>${main.basedir}/checkstyle/ClassHeader.txt</headerLocation>
+                        <enableRSS>false</enableRSS>
+                        <linkXRef>true</linkXRef>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <failOnViolation>true</failOnViolation>
+                        <includeTestSourceDirectory>false</includeTestSourceDirectory>
+                        <enableRulesSummary>true</enableRulesSummary>
+                        <propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+    <profile>
+        <id>findbugs</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>findbugs-maven-plugin</artifactId>
+                    <version>${maven.findbugs.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <failOnError>true</failOnError>
+                        <excludeFilterFile>${main.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+    <profile>
+        <id>test-coverage</id>
+        <properties>
+            <argLine>
+                -Xms128m -Xmx1G -XX:MaxPermSize=128M
+                -Dhazelcast.phone.home.enabled=false
+                -Dhazelcast.mancenter.enabled=false
+                -Dhazelcast.logging.type=none
+                -Dhazelcast.test.use.network=false
+            </argLine>
+        </properties>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${maven.jacoco.plugin.version}</version>
+                    <configuration>
+                        <excludes>
+                            <exclude>**DummyProperty**</exclude>
+                            <exclude>**DummyEntity**</exclude>
+                            <exclude>**test-hibernate**</exclude>
+                            <exclude>**HibernateStatisticsTestSupport**</exclude>
+                            <exclude>**HibernateTestSupport**</exclude>
+                            <exclude>**RegionFactoryDefaultTest**</exclude>
+                            <exclude>**/client/**Request.*</exclude>
+                        </excludes>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                    <configuration combine.self="override">
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <testFailureIgnore>true</testFailureIgnore>
+                        <includes>
+                            <include>**/*.java</include>
+                        </includes>
+                        <groups>com.hazelcast.test.annotation.QuickTest,com.hazelcast.test.annotation.SlowTest</groups>
+                        <excludedGroups>
+                            com.hazelcast.test.annotation.NightlyTest
+                        </excludedGroups>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+</profiles>
 </project>
